buggypod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    gke-gcsfuse/volumes: "true"
  name: gcsfuse-buggypod
  namespace: default
spec:
  serviceAccountName: default
  containers:
    - name: prewarm-inodes
      image: busybox
      command: ["/bin/sh", "-c"]
      args:
        - |
          echo "[INFO] Prewarming inodes via stat..."
          find /content -type f -exec stat {} \; || true
          echo "[INFO] Prewarming finished. Now sleeping..."
          sleep infinity
      volumeMounts:
        - name: gcs
          mountPath: /content
  volumes:
    - name: gcs
      persistentVolumeClaim:
        claimName: gcsfuse-debugger-pvc
  restartPolicy: Never
