override-gcsfuse-1.8.9-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    gke-gcsfuse/volumes: "true"
  name: gcsfuse-override-pod
  namespace: default
spec:
  serviceAccountName: default
  containers:
    - name: gke-gcsfuse-sidecar
      image: gcr.io/gke-release/gcs-fuse-csi-driver-sidecar-mounter:v1.8.9-gke.2
    - name: shell
      image: ubuntu
      command: ["/bin/bash"]
      args: ["-c", "sleep infinity"]
      volumeMounts:
        - name: gcs
          mountPath: /content
  volumes:
    - name: gcs
      persistentVolumeClaim:
        claimName: gcsfuse-debugger-pvc
  restartPolicy: Never
