kyverno-cp-job.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: kyverno-cp-job
spec:
  background: false
  mutateExistingOnPolicyUpdate: false
  rules:
    - name: samplejob-job
      match:
        all:
          - resources:
              kinds:
                - Job
              names:
                - "samplejob*"
              namespaces:
                - default
              annotations:
                gke-gcsfuse/volumes: "true"
      mutate:
        patchesJson6902: |-
          - op: add
            path: /spec/template/spec/initContainers
            value:
            - name: gke-gcsfuse-sidecar
              image: gcr.io/gke-release/gcs-fuse-csi-driver-sidecar-mounter:v1.8.9-gke.2
              resources:
                requests:
                  ephemeral-storage: "1Gi"
                limits:
                  ephemeral-storage: "1Gi"
